# inference-x-llm-runner-for-android

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  build.gradle.kts  build_attempt_812.txt  build_attempt_jbr.txt  build_clean_reassemble.txt  build_fix_arm64_lib.txt  build_fix_jni_load.txt  build_fix_jni_load_both.txt  build_fix_model_path.txt  build_fix_permissions.txt  build_local_model_config.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_result.txt  build_result_stacktrace.txt  build_verification.txt  build_verification_clean.txt  build_verification_cmake.txt  build_verification_final.txt  build_verification_jni.txt  build_verification_jni_fix.txt  build_verification_x86.txt  build_verification_x86_final.txt  build_verification_x86_fix.txt  generate_keystore.bat  gradle.properties  settings.gradle.kts  version.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  llama_jni.h
app/src/main/java/com/mobilellama/: MainActivity.kt  MobileLlamaApplication.kt
app/src/main/java/com/mobilellama/data/database/: AppDatabase.kt  MessageDao.kt
app/src/main/java/com/mobilellama/data/model/: AiModel.kt  DownloadState.kt  InferenceState.kt  Message.kt
app/src/main/java/com/mobilellama/data/repository/: InferenceRepository.kt  ModelRepository.kt
app/src/main/java/com/mobilellama/di/: AppModule.kt
app/src/main/java/com/mobilellama/native/: LlamaEngine.kt
app/src/main/java/com/mobilellama/ui/components/: ActionButton.kt  (+5 more)
app/src/main/java/com/mobilellama/viewmodel/: ChatViewModel.kt  DownloadViewModel.kt
app/src/main/jniLibs/: README.md
app/src/main/res/values/: strings.xml  themes.xml
stitch-ui/main_inference_screen/: code.html
stitch-ui/model_management_hub/: code.html
stitch-ui/onboarding_1__performance/: code.html
stitch-ui/onboarding_2__privacy/: code.html
stitch-ui/onboarding_3__final_call_to_action/: code.html
(+8 files in other folders)
